syntax = "proto3";
package records;

service RecordsService {
    rpc GetRecordsList(GetRecordsListRequest) returns (GetRecordsListResponse) {
    }

    rpc GetRecordsPreview(GetRecordsPreviewRequest) returns (GetRecordsPreviewResponse) {
    }

    rpc MarkRecord(MarkRecordRequest) returns (MarkRecordResponse) {
    }
}

message GetRecordsListRequest {

}

message GetRecordsListResponse {

}

message GetRecordsPreviewRequest {

}

message GetRecordsPreviewResponse {

}

message MarkRecordRequest {

}

message MarkRecordResponse {

}